--- a/bower.json
+++ b/bower.json
@@ -16,8 +16,8 @@
   ],
   "dependencies": {
     "polymer": "~0.3.3",
-    "polymer-signals": "Polymer/polymer-signals#~0.3.0",
     "font-awesome": "~4.1.0",
-    "polymer-ajax": "Polymer/polymer-ajax#~0.3.0"
+    "core-signals": "Polymer/core-signals#~0.3.5",
+    "core-ajax": "Polymer/core-ajax#~0.3.5"
   }
 }
