--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "grunt-contrib-copy": "^0.8.0",
     "grunt-nw": "git+https://github.com/snap-project/grunt-nw#develop",
     "lodash": "^3.7.0"
+  },
+  "dependencies": {
+    "async": "^0.9.0",
+    "fs-extra": "^0.18.2"
   }
 }
