--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "angular": "~1.3.15",
     "angular-route": "~1.3.15",
     "angular-gridster": "~0.11.7",
-    "plugin-text": "systemjs/plugin-text#~0.0.2"
+    "plugin-text": "systemjs/plugin-text#~0.0.2",
+    "node-uuid": "~1.4.3"
   }
 }
